# gamestore-api

./: .gitignore  README.md  pyproject.toml
gamestore/: settings.py  urls.py
gamestore/apps/auth/: serializers.py  urls.py  views.py
gamestore/apps/cart/: models.py
gamestore/apps/cart/migrations/: 0001_initial.py
gamestore/apps/catalog/: admin.py  models.py
gamestore/apps/catalog/fixtures/: products.json
gamestore/apps/catalog/migrations/: 0001_initial.py
gamestore/apps/common/: models.py
gamestore/apps/order/: admin.py  enums.py  models.py
gamestore/apps/order/migrations/: 0001_initial.py
